syntax = "proto3";

package pb;
option go_package = ".;pb";


/*
dsa to ds id
*/
message DSA2DS_MsgID {
	enum MsgID {
		QueryDsStatus  = 0;
	}
}

/**
DSA2DS_MsgIDQueryDsStatus
*/
message  QueryDSStatusReq{
}

/*
ds to dsa id
*/
message DS2DSA_MsgID {
	enum MsgID {
		DSUpdateState  = 0; //当前游戏状态
		DSCreateOK     = 1; //DS进程启动成功
		DSGameEnd      = 2; //游戏结束，可以回收进程
	}
}

/**
DS2DSA_MsgID_CreateOK
*/
message  DS2DSA_CreateOK{
	string   dsID     =1; //DS id
	string   realmID  =2;
}

/**
DS2DSA_MsgID_DSGameEnd
*/
message  DS2DSA_GameEndReq{
	string   dsID        =1;
}

/**
DS2DSA_MsgID_DSUpdateState
*/
message  DS2DSA_UpdateStateReq{

}
